--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password= admin
 spring.h2.console.enabled= true
 spring.devtools.livereload.enabled= false
 spring.devtools.restart.enabled= false
+spring.h2.console.path=/h2-console
